.html Extension + SEO

--- a/index.html
+++ b/index.html
@@ -29,28 +29,28 @@
   <div class="page">
     <div class="nav">
       <div class="nav-logo">
-        <a href="#">
-          <img src="img/logo-black.svg">
+        <a href="index" title="home">
+          <img src="img/logo-black.svg" alt="michael apfelthaler webdev logo">
         </a>
       </div>
       <div class="nav-links">
         <div class="nav-link">
-          <a href="webdev.html">
+          <a href="webdev" title="Web Development">
             Web Development
           </a>
         </div>
         <div class="nav-link">
-          <a href="design.html">
+          <a href="design" title="Graphic Design">
             Graphic Design
           </a>
         </div>
         <div class="nav-link">
-          <a href="fitness.html">
+          <a href="fitness" title="Fitness">
             Fitness
           </a>
         </div>
         <div class="nav-link">
-          <a href="about.html">
+          <a href="about" title="About">
             About me
           </a>
         </div>
@@ -71,7 +71,7 @@
     </div>
     <div class="home-footer">
       <div class="btn btn-plant">
-        <a href="#hobbies">
+        <a href="#hobbies" title="Next Section">
           <div class="scroll-down"></div>
         </a>
       </div>
