Graphic Design + Favicon

--- a/design.html
+++ b/design.html
@@ -39,7 +39,7 @@
             Web Development
           </a>
         </div>
-        <div class="nav-link">
+        <div class="nav-link active">
           <a href="design.html">
             Graphic Design
           </a>
@@ -56,7 +56,53 @@
         </div>
       </div>
     </div>
+    <div class="hobby-grid-right">
+      <div class="text-container">
+        <h2>Graphic Design</h2>
+        <p>
+          Lorem ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsakLorem 
+          ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsakLorem
+        </p>
+        <div class="btn btn-green text-right"><a href="#">Mehr dazu</a></div>
+      </div>
+      <div class="image-container"><img src="img/art.svg" alt="fitness"></div>
+  </div>
+    <div class="grid">
 
+      <div class="grid-el">
+        <a href="https://dribbble.com/shots/15407155-Five-Leaf-Clover" target="_blank" title="Apfel Logo Apfelthaler Webdev">
+          <div class="image_container"><img src="img/apfel.png"></div> 
+        <div class="hover-el">
+          <div class="hover-el-el">
+            Apfel
+            <div class="small-text">My logo :)</div>
+            <div style="position:absolute;right: 30px;bottom: 20px;">-></div>
+          </div>
+        </div>
+      </a>
+      </div>
+
+      <div class="grid-el">
+        <a href="https://dribbble.com/shots/15407155-Five-Leaf-Clover">
+          <div class="image_container"><img src="img/clover.png"></div> 
+        <div class="hover-el">
+          Five Leave Clover
+          <div class="inline-btn">Show on Dribbble!</div>
+        </div>
+      </a>
+      </div>
+      
+      <div class="grid-el">
+        <a href="https://dribbble.com/shots/15407155-Five-Leaf-Clover">
+          <div class="image_container"><img src="img/datepoll.jpg"></div> 
+        <div class="hover-el">
+          DatePoll Logo #2
+          <div class="inline-btn">Show on Dribbble!</div>
+        </div>
+      </a>
+      </div>
+      <div class="grid-el">Test</div>
+    </div>
   </div>
   
   <footer>
