--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </div>
   </div>
   <div class="page" id="hobbies">
-    <div class="hobby-grid-left">
+    <div class="hobby-grid-left mt200">
         <div class="image-container"><img src="img/webdev.svg" alt="fitness"></div>
         <div class="text-container">
           <h2>Web Development</h2>
@@ -89,7 +89,7 @@
           <div class="btn btn-green text-right"><a href="#">Mehr dazu</a></div>
         </div>
     </div>
-    <div class="hobby-grid-right">
+    <div class="hobby-grid-right mt200">
       <div class="text-container">
         <h2>Graphic Design</h2>
         <p>
@@ -100,7 +100,7 @@
       </div>
       <div class="image-container"><img src="img/art.svg" alt="fitness"></div>
   </div>
-  <div class="hobby-grid-left" style="margin-bottom: 120px;">
+  <div class="hobby-grid-left mt200" style="margin-bottom: 120px;">
     <div class="image-container"><img src="img/fitness.svg" alt="fitness"></div>
     <div class="text-container">
       <h2>Sports & Fitness</h2>
