--- a/design.html
+++ b/design.html
@@ -29,34 +29,34 @@
   <div class="page">
     <div class="nav">
       <div class="nav-logo">
-        <a href="#">
-          <img src="img/logo-black.svg">
+        <a href="index" title="home">
+          <img src="img/logo-black.svg" alt="michael apfelthaler webdev logo">
         </a>
       </div>
       <div class="nav-links">
         <div class="nav-link">
-          <a href="webdev.html">
+          <a href="webdev" title="Web Development">
             Web Development
           </a>
         </div>
-        <div class="nav-link active">
-          <a href="design.html">
+        <div class="nav-link">
+          <a href="design" title="Graphic Design">
             Graphic Design
           </a>
         </div>
         <div class="nav-link">
-          <a href="fitness.html">
+          <a href="fitness" title="Fitness">
             Fitness
           </a>
         </div>
         <div class="nav-link">
-          <a href="about.html">
+          <a href="about" title="About">
             About me
           </a>
         </div>
       </div>
     </div>
-    <div class="hobby-grid-right">
+    <div class="hobby-grid-right mt100">
       <div class="text-container">
         <h2>Graphic Design</h2>
         <p>
@@ -67,7 +67,7 @@
       </div>
       <div class="image-container"><img src="img/art.svg" alt="fitness"></div>
   </div>
-    <div class="grid">
+    <div class="grid mt200">
 
       <div class="grid-el">
         <a href="https://dribbble.com/shots/15407155-Five-Leaf-Clover" target="_blank" title="Apfel Logo Apfelthaler Webdev">
@@ -109,31 +109,31 @@
     <div>
       <h3>Pages</h3>
       <div class="footer-link">
-        <a href="webdev.html">Web Development</a>
+        <a href="webdev">Web Development</a>
       </div>
       <div class="footer-link">
-        <a href="design.html">Graphic Design</a>
+        <a href="design">Graphic Design</a>
       </div>
       <div class="footer-link">
-        <a href="fitness.html">Fitness</a>
+        <a href="fitness">Fitness</a>
       </div>
       <div class="footer-link">
-        <a href="about.html">About me</a>
+        <a href="about">About me</a>
       </div>
       <div class="footer-link">
-        <a href="contact.html">Contact</a>
+        <a href="contact">Contact</a>
       </div>
     </div>
     <div>
       <h3>Other Pages</h3>
       <div class="footer-link">
-        <a href="gtc.html">GTC</a>
+        <a href="gtc">GTC</a>
       </div>
       <div class="footer-link">
-        <a href="dataprot.html">Data Protection</a>
+        <a href="dataprot">Data Protection</a>
       </div>
       <div class="footer-link">
-        <a href="legal-notice.html">Legal Notice</a>
+        <a href="legal-notice">Legal Notice</a>
       </div>
     </div>
     <div>
