--- a/design.html
+++ b/design.html
@@ -67,7 +67,7 @@
       </div>
       <div class="image-container"><img src="img/art.svg" alt="fitness"></div>
   </div>
-    <div class="grid mt200">
+    <div class="grid mt200 mb200">
 
       <div class="grid-el">
         <a href="https://dribbble.com/shots/15407155-Five-Leaf-Clover" target="_blank" title="Apfel Logo Apfelthaler Webdev">
@@ -101,54 +101,55 @@
         </div>
       </a>
       </div>
-      <div class="grid-el">Test</div>
     </div>
   </div>
   
   <footer>
-    <div>
-      <h3>Pages</h3>
-      <div class="footer-link">
-        <a href="webdev">Web Development</a>
+    <div class="footer-grid">
+      <div>
+        <h3>Pages</h3>
+        <div class="footer-link">
+          <a href="webdev">Web Development</a>
+        </div>
+        <div class="footer-link">
+          <a href="design">Graphic Design</a>
+        </div>
+        <div class="footer-link">
+          <a href="fitness">Fitness</a>
+        </div>
+        <div class="footer-link">
+          <a href="about">About me</a>
+        </div>
+        <div class="footer-link">
+          <a href="contact">Contact</a>
+        </div>
       </div>
-      <div class="footer-link">
-        <a href="design">Graphic Design</a>
+      <div>
+        <h3>Other Pages</h3>
+        <div class="footer-link">
+          <a href="gtc">GTC</a>
+        </div>
+        <div class="footer-link">
+          <a href="dataprot">Data Protection</a>
+        </div>
+        <div class="footer-link">
+          <a href="legal-notice">Legal Notice</a>
+        </div>
       </div>
-      <div class="footer-link">
-        <a href="fitness">Fitness</a>
-      </div>
-      <div class="footer-link">
-        <a href="about">About me</a>
-      </div>
-      <div class="footer-link">
-        <a href="contact">Contact</a>
+      <div>
+        <h3>Social Media</h3>
+        <div class="footer-link">
+          <a href="https://dribbble.com/apfel">Dribbble</a>
+        </div>
+        <div class="footer-link">
+          <a href="https://instagram.com/notapfel">Instagram</a>
+        </div>
+        <div class="footer-link">
+          <a href="https://twitter.com/apfelth">Twitter</a>
+        </div>
       </div>
     </div>
-    <div>
-      <h3>Other Pages</h3>
-      <div class="footer-link">
-        <a href="gtc">GTC</a>
-      </div>
-      <div class="footer-link">
-        <a href="dataprot">Data Protection</a>
-      </div>
-      <div class="footer-link">
-        <a href="legal-notice">Legal Notice</a>
-      </div>
-    </div>
-    <div>
-      <h3>Social Media</h3>
-      <div class="footer-link">
-        <a href="https://dribbble.com/apfel">Dribbble</a>
-      </div>
-      <div class="footer-link">
-        <a href="https://instagram.com/notapfel">Instagram</a>
-      </div>
-      <div class="footer-link">
-        <a href="https://twitter.com/apfelth">Twitter</a>
-      </div>
-    </div>
-  </footer>
+    </footer>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
