--- a/index.html
+++ b/index.html
@@ -54,6 +54,23 @@
             About me
           </a>
         </div>
+        <div class="mobile-nav">
+          MENU
+          <div>
+            <a href="webdev" title="Web Development">
+              Web Development
+            </a>
+            <a href="design" title="Graphic Design">
+              Graphic Design
+            </a>
+            <a href="fitness" title="Fitness">
+              Fitness
+            </a>
+            <a href="about" title="About">
+              About me
+            </a>
+        </div>
+      </div>
       </div>
     </div>
     <div class="home-high">
@@ -86,7 +103,7 @@
             Lorem ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsakLorem 
             ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsak
           </p>
-          <div class="btn btn-green text-right"><a href="#">Mehr dazu</a></div>
+          <div class="btn btn-green text-right"><a href="#">More Information</a></div>
         </div>
     </div>
     <div class="hobby-grid-right mt200">
@@ -96,11 +113,11 @@
           Lorem ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsakLorem 
           ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsakLorem
         </p>
-        <div class="btn btn-green text-right"><a href="#">Mehr dazu</a></div>
+        <div class="btn btn-green text-right"><a href="#">More Information</a></div>
       </div>
       <div class="image-container"><img src="img/art.svg" alt="fitness"></div>
   </div>
-  <div class="hobby-grid-left mt200" style="margin-bottom: 120px;">
+  <div class="hobby-grid-left mt200 mb200">
     <div class="image-container"><img src="img/fitness.svg" alt="fitness"></div>
     <div class="text-container">
       <h2>Sports & Fitness</h2>
@@ -108,39 +125,40 @@
         Lorem ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsakLorem 
         ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsak
       </p>
-      <div class="btn btn-green text-right"><a href="#">Mehr dazu</a></div>
+      <div class="btn btn-green text-right"><a href="#">More Information</a></div>
     </div>
 </div>
   </div>
   <footer>
+  <div class="footer-grid">
     <div>
       <h3>Pages</h3>
       <div class="footer-link">
-        <a href="webdev.html">Web Development</a>
+        <a href="webdev">Web Development</a>
       </div>
       <div class="footer-link">
-        <a href="design.html">Graphic Design</a>
+        <a href="design">Graphic Design</a>
       </div>
       <div class="footer-link">
-        <a href="fitness.html">Fitness</a>
+        <a href="fitness">Fitness</a>
       </div>
       <div class="footer-link">
-        <a href="about.html">About me</a>
+        <a href="about">About me</a>
       </div>
       <div class="footer-link">
-        <a href="contact.html">Contact</a>
+        <a href="contact">Contact</a>
       </div>
     </div>
     <div>
       <h3>Other Pages</h3>
       <div class="footer-link">
-        <a href="gtc.html">GTC</a>
+        <a href="gtc">GTC</a>
       </div>
       <div class="footer-link">
-        <a href="dataprot.html">Data Protection</a>
+        <a href="dataprot">Data Protection</a>
       </div>
       <div class="footer-link">
-        <a href="legal-notice.html">Legal Notice</a>
+        <a href="legal-notice">Legal Notice</a>
       </div>
     </div>
     <div>
@@ -155,6 +173,7 @@
         <a href="https://twitter.com/apfelth">Twitter</a>
       </div>
     </div>
+  </div>
   </footer>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
