--- a/mt.html
+++ b/mt.html
@@ -29,28 +29,28 @@
   <div class="page">
     <div class="nav">
       <div class="nav-logo">
-        <a href="#">
-          <img src="img/logo-black.svg">
+        <a href="index" title="home">
+          <img src="img/logo-black.svg" alt="michael apfelthaler webdev logo">
         </a>
       </div>
       <div class="nav-links">
         <div class="nav-link">
-          <a href="webdev.html">
+          <a href="webdev" title="Web Development">
             Web Development
           </a>
         </div>
         <div class="nav-link">
-          <a href="design.html">
+          <a href="design" title="Graphic Design">
             Graphic Design
           </a>
         </div>
         <div class="nav-link">
-          <a href="fitness.html">
+          <a href="fitness" title="Fitness">
             Fitness
           </a>
         </div>
         <div class="nav-link">
-          <a href="about.html">
+          <a href="about" title="About">
             About me
           </a>
         </div>
@@ -60,49 +60,51 @@
   </div>
   
   <footer>
-    <div>
-      <h3>Pages</h3>
-      <div class="footer-link">
-        <a href="webdev.html">Web Development</a>
+    <div class="footer-grid">
+      <div>
+        <h3>Pages</h3>
+        <div class="footer-link">
+          <a href="webdev">Web Development</a>
+        </div>
+        <div class="footer-link">
+          <a href="design">Graphic Design</a>
+        </div>
+        <div class="footer-link">
+          <a href="fitness">Fitness</a>
+        </div>
+        <div class="footer-link">
+          <a href="about">About me</a>
+        </div>
+        <div class="footer-link">
+          <a href="contact">Contact</a>
+        </div>
       </div>
-      <div class="footer-link">
-        <a href="design.html">Graphic Design</a>
+      <div>
+        <h3>Other Pages</h3>
+        <div class="footer-link">
+          <a href="gtc">GTC</a>
+        </div>
+        <div class="footer-link">
+          <a href="dataprot">Data Protection</a>
+        </div>
+        <div class="footer-link">
+          <a href="legal-notice">Legal Notice</a>
+        </div>
       </div>
-      <div class="footer-link">
-        <a href="fitness.html">Fitness</a>
-      </div>
-      <div class="footer-link">
-        <a href="about.html">About me</a>
-      </div>
-      <div class="footer-link">
-        <a href="contact.html">Contact</a>
+      <div>
+        <h3>Social Media</h3>
+        <div class="footer-link">
+          <a href="https://dribbble.com/apfel">Dribbble</a>
+        </div>
+        <div class="footer-link">
+          <a href="https://instagram.com/notapfel">Instagram</a>
+        </div>
+        <div class="footer-link">
+          <a href="https://twitter.com/apfelth">Twitter</a>
+        </div>
       </div>
     </div>
-    <div>
-      <h3>Other Pages</h3>
-      <div class="footer-link">
-        <a href="gtc.html">GTC</a>
-      </div>
-      <div class="footer-link">
-        <a href="dataprot.html">Data Protection</a>
-      </div>
-      <div class="footer-link">
-        <a href="legal-notice.html">Legal Notice</a>
-      </div>
-    </div>
-    <div>
-      <h3>Social Media</h3>
-      <div class="footer-link">
-        <a href="https://dribbble.com/apfel">Dribbble</a>
-      </div>
-      <div class="footer-link">
-        <a href="https://instagram.com/notapfel">Instagram</a>
-      </div>
-      <div class="footer-link">
-        <a href="https://twitter.com/apfelth">Twitter</a>
-      </div>
-    </div>
-  </footer>
+    </footer>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
