--- a/dataprot.html
+++ b/dataprot.html
@@ -29,80 +29,127 @@
   <div class="page">
     <div class="nav">
       <div class="nav-logo">
-        <a href="#">
-          <img src="img/logo-black.svg">
+        <a href="index" title="home">
+          <img src="img/logo-black.svg" alt="michael apfelthaler webdev logo">
         </a>
       </div>
       <div class="nav-links">
         <div class="nav-link">
-          <a href="webdev.html">
+          <a href="webdev" title="Web Development">
             Web Development
           </a>
         </div>
         <div class="nav-link">
-          <a href="design.html">
+          <a href="design" title="Graphic Design">
             Graphic Design
           </a>
         </div>
         <div class="nav-link">
-          <a href="fitness.html">
+          <a href="fitness" title="Fitness">
             Fitness
           </a>
         </div>
         <div class="nav-link">
-          <a href="about.html">
+          <a href="about" title="About">
             About me
           </a>
         </div>
       </div>
     </div>
+    <div class="hobby-grid-right mt100">
+      <div class="text-container">
+        <h2>Graphic Design</h2>
+        <p>
+          Lorem ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsakLorem 
+          ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsakLorem
+        </p>
+        <div class="btn btn-green text-right"><a href="#">Mehr dazu</a></div>
+      </div>
+      <div class="image-container"><img src="img/art.svg" alt="fitness"></div>
+  </div>
+    <div class="grid mt200 mb200">
 
+      <div class="grid-el">
+        <a href="https://dribbble.com/shots/15407155-Five-Leaf-Clover" target="_blank" title="Apfel Logo Apfelthaler Webdev">
+          <div class="image_container"><img src="img/apfel.png"></div> 
+        <div class="hover-el">
+          <div class="hover-el-el">
+            Apfel
+            <div class="small-text">My logo :)</div>
+            <div style="position:absolute;right: 30px;bottom: 20px;">-></div>
+          </div>
+        </div>
+      </a>
+      </div>
+
+      <div class="grid-el">
+        <a href="https://dribbble.com/shots/15407155-Five-Leaf-Clover">
+          <div class="image_container"><img src="img/clover.png"></div> 
+        <div class="hover-el">
+          Five Leave Clover
+          <div class="inline-btn">Show on Dribbble!</div>
+        </div>
+      </a>
+      </div>
+      
+      <div class="grid-el">
+        <a href="https://dribbble.com/shots/15407155-Five-Leaf-Clover">
+          <div class="image_container"><img src="img/datepoll.jpg"></div> 
+        <div class="hover-el">
+          DatePoll Logo #2
+          <div class="inline-btn">Show on Dribbble!</div>
+        </div>
+      </a>
+      </div>
+    </div>
   </div>
   
   <footer>
-    <div>
-      <h3>Pages</h3>
-      <div class="footer-link">
-        <a href="webdev.html">Web Development</a>
+    <div class="footer-grid">
+      <div>
+        <h3>Pages</h3>
+        <div class="footer-link">
+          <a href="webdev">Web Development</a>
+        </div>
+        <div class="footer-link">
+          <a href="design">Graphic Design</a>
+        </div>
+        <div class="footer-link">
+          <a href="fitness">Fitness</a>
+        </div>
+        <div class="footer-link">
+          <a href="about">About me</a>
+        </div>
+        <div class="footer-link">
+          <a href="contact">Contact</a>
+        </div>
       </div>
-      <div class="footer-link">
-        <a href="design.html">Graphic Design</a>
+      <div>
+        <h3>Other Pages</h3>
+        <div class="footer-link">
+          <a href="gtc">GTC</a>
+        </div>
+        <div class="footer-link">
+          <a href="dataprot">Data Protection</a>
+        </div>
+        <div class="footer-link">
+          <a href="legal-notice">Legal Notice</a>
+        </div>
       </div>
-      <div class="footer-link">
-        <a href="fitness.html">Fitness</a>
-      </div>
-      <div class="footer-link">
-        <a href="about.html">About me</a>
-      </div>
-      <div class="footer-link">
-        <a href="contact.html">Contact</a>
+      <div>
+        <h3>Social Media</h3>
+        <div class="footer-link">
+          <a href="https://dribbble.com/apfel">Dribbble</a>
+        </div>
+        <div class="footer-link">
+          <a href="https://instagram.com/notapfel">Instagram</a>
+        </div>
+        <div class="footer-link">
+          <a href="https://twitter.com/apfelth">Twitter</a>
+        </div>
       </div>
     </div>
-    <div>
-      <h3>Other Pages</h3>
-      <div class="footer-link">
-        <a href="gtc.html">GTC</a>
-      </div>
-      <div class="footer-link">
-        <a href="dataprot.html">Data Protection</a>
-      </div>
-      <div class="footer-link">
-        <a href="legal-notice.html">Legal Notice</a>
-      </div>
-    </div>
-    <div>
-      <h3>Social Media</h3>
-      <div class="footer-link">
-        <a href="https://dribbble.com/apfel">Dribbble</a>
-      </div>
-      <div class="footer-link">
-        <a href="https://instagram.com/notapfel">Instagram</a>
-      </div>
-      <div class="footer-link">
-        <a href="https://twitter.com/apfelth">Twitter</a>
-      </div>
-    </div>
-  </footer>
+    </footer>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
