--- a/index.html
+++ b/index.html
@@ -30,28 +30,28 @@
     <div class="nav">
       <div class="nav-logo">
         <a href="index" title="home">
-          <img src="img/logo-black.svg" alt="michael apfelthaler webdev logo">
+          <img src="img/apfel.svg" alt="michael apfelthaler webdev logo">
         </a>
       </div>
       <div class="nav-links">
         <div class="nav-link">
           <a href="webdev" title="Web Development">
-            Web Development
+            <span>Web Development</span>
           </a>
         </div>
         <div class="nav-link">
           <a href="design" title="Graphic Design">
-            Graphic Design
+            <span>Graphic Design</span>
           </a>
         </div>
         <div class="nav-link">
           <a href="fitness" title="Fitness">
-            Fitness
+            <span>Sports</span>
           </a>
         </div>
         <div class="nav-link">
-          <a href="about" title="About">
-            About me
+          <a href="#contact" title="About" class="nav-emph">
+            Contact
           </a>
         </div>
         <div class="mobile-nav">
@@ -74,20 +74,20 @@
       </div>
     </div>
     <div class="home-high">
-      <h1>
-        <div>
-          <span id="home-high-text1">HELLO.</span><br id="home-high-break1">
-          <span id="home-high-text2">MICHAEL</span>
-        </div> 
-        <div>
-          <span id="home-high-text3">MY NAME IS</span><br id="home-high-break2">
-          <span id="home-high-text4">APFELTHALER</span>
+      <div class="hobby-grid-right">
+        <div class="text-container">
+          <h2 class="fs-32">Web Development, UX/UI and Sports are my ❤️.</h2>
+          <p>
+            I am Michael Apfelthaler. A web developer from Austria. I have a passion for sports and recently got more into UX/UI Design.
+          </p>
+          <div class="btn-emphasized"><a href="#">Get in touch!</a></div>
         </div>
-      </h1>
+        <div class="image-container"><img src="img/me-cropped.png" alt="fitness"></div>
+    </div>
       
     </div>
     <div class="home-footer">
-      <div class="btn btn-plant">
+      <div class="btn-plant">
         <a href="#hobbies" title="Next Section">
           <div class="scroll-down"></div>
         </a>
@@ -100,20 +100,20 @@
         <div class="text-container">
           <h2>Web Development</h2>
           <p>
-            Lorem ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsakLorem 
-            ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsak
+            I was introduced to webdev in autumn 2014. Ever since it has been part of my life. 
+            At first just in school, then doing projects with friends and since autumn 2020 as a profession.
           </p>
-          <div class="btn btn-green text-right"><a href="#">More Information</a></div>
+          <div class="btn btn-green"><a href="#">Show me!</a></div>
         </div>
     </div>
     <div class="hobby-grid-right mt200">
       <div class="text-container">
-        <h2>Graphic Design</h2>
+        <h2>UX / UI Design</h2>
         <p>
-          Lorem ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsakLorem 
-          ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsakLorem
+          In winter 2020 I decided to take on a new hobby, UX/UI Design. 
+          Doing 2 courses and trying to build my portfolio, whilst working as a fulltime web developer.
         </p>
-        <div class="btn btn-green text-right"><a href="#">More Information</a></div>
+        <div class="btn btn-green"><a href="#">Show me!</a></div>
       </div>
       <div class="image-container"><img src="img/art.svg" alt="fitness"></div>
   </div>
@@ -122,10 +122,9 @@
     <div class="text-container">
       <h2>Sports & Fitness</h2>
       <p>
-        Lorem ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsakLorem 
-        ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsakLorem ipsum dlkjsakdsaokpdsaokpdsak
+        Since 2005 I play football at a local club. For injury prevention and to equalize various muscle I started going to the gym. 
       </p>
-      <div class="btn btn-green text-right"><a href="#">More Information</a></div>
+      <div class="btn btn-green"><a href="#">Show me!</a></div>
     </div>
 </div>
   </div>
